src/main/java/com/example/demo/common/error/CustomErrorCode.java
package com.example.demo.common.error;

public enum CustomErrorCode {
    DUPLICATED_MEMBER_SERVICE_ID,
    DUPLICATED_MEMBER_NICKNAME,
    SERVER_INTERNAL_ERROR,
    NOT_FOUND_MEMBER,
    INVALID_CLIENT_REQUEST_BODY,
    INVALID_TOKEN_EXCEPTION,
    REQUEST_WITH_BLACK_LIST_TOKEN,
    NOT_FOUND_DATA_IN_REQUEST,
    NOT_FOUND_WORLD_CUP_GAME,
    NO_ROUNDS_AVAILABLE_TO_PLAY,
    NOT_SUPPORTED_GAME_ROUND,
    ILLEGAL_WORLD_CUP_GAME_CONTENTS,
    NOT_OWNER_GAME,
    EXPIRED_REMEMBER_ME
}